bugfix(slider): fixed cropping images and wrong display

--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 }
 
 main {
-    height: calc(100% - 70px);
+    height: calc(100%);
     display: flex;
     flex-direction: column;
 }
@@ -47,6 +47,7 @@ h2.ticket-title {
 section#info {
     margin-bottom: 20px;
 }
+
 section#info p {
     font-size: 1.1em;
     font-weight: bold;
@@ -63,7 +64,7 @@ section#slider {
     position: relative;
     bottom: 0;
     height: 400px;
-    width: 96%;
+    width: calc(100vw - 20px);
     display: flex;
     flex-direction: column;
 }
@@ -71,7 +72,7 @@ section#slider {
 .carousel-track-container {
     height: 100%;
     overflow: hidden;
-    width: 94%;
+    width: calc(100vw - 40px);
     align-self: center;
     margin-top: 3%;
     margin-bottom: 10px;
@@ -90,7 +91,7 @@ section#slider {
 .shading-strip {
     position: absolute;
     bottom: 10px;
-    width: 94%;
+    width: calc(100vw - 40px);
     height: 40px;
     border-radius: 0 0 10px 10px;
     z-index: 9;
@@ -101,19 +102,22 @@ section#slider {
 }
 
 .carousel-slide {
+    position: relative;
     border-radius: 10px;
     overflow: hidden;
     z-index: 1;
-    width: calc(100vw - 2%);
+    width: calc(100vw - 40px);
     display: flex;
     justify-content: center;
 }
 
 .carousel-slide img {
+    position: absolute;
     align-self: center;
     height: 100%;
     width: auto;
     border-radius: 10px;
+    object-fit: contain;
 }
 
 .carousel-slide a[download] {
@@ -253,7 +257,8 @@ section#slider {
     align-items: center;
     padding: 5px;
 }
-.popup-img-wrapper .close-btn img{
+
+.popup-img-wrapper .close-btn img {
     width: 26px;
 }
 
@@ -330,12 +335,16 @@ section#slider {
         width: 50%;
         align-self: self-end;
     }
+
     .carousel-slide img {
+        position: absolute;
+        object-fit:contain;
         align-self: center;
-        height: auto;
+        height: 100%;
         width: 100%;
         border-radius: 10px;
     }
+
     .carousel-indicator .indicator {
         padding: 0 10px 0 10px;
     }
